--- a/src/Dapper.Aerospike/Dapper.Aerospike.csproj
+++ b/src/Dapper.Aerospike/Dapper.Aerospike.csproj
@@ -13,10 +13,10 @@
 	<ItemGroup>
 		<PackageReference Include="Aerospike.Client" Version="4.2.0" />
 		<PackageReference Include="AtEase" Version="1.0.22" />
-		<PackageReference Include="MinVer" Version="2.5.0">
+		<!--<PackageReference Include="MinVer" Version="2.5.0">
 			<PrivateAssets>all</PrivateAssets>
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-		</PackageReference>
+		</PackageReference>-->
 	</ItemGroup>
 
 	<PropertyGroup Condition=" '$(TargetFramework)' == 'net5.0'">
