--- a/src/Dapper.Aerospike/Dapper.Aerospike.csproj
+++ b/src/Dapper.Aerospike/Dapper.Aerospike.csproj
@@ -2,17 +2,29 @@
 
 	<PropertyGroup>
 		<TargetFrameworks>netstandard2.0;net5.0</TargetFrameworks>
-		<AssemblyName>Dapper.Aerospike</AssemblyName>
-		<Title>Dapper.Aerospike</Title>
+		<LangVersion>9.0</LangVersion>
+		<PackageId>$(AssemblyName)</PackageId>
+		<Title>Dapper Aerospike</Title>
 		<PackageTags>fluent mapper;orm;sql;micro-orm</PackageTags>
 		<Description>Aerospike fluent mapper</Description>
 		<Authors>Ahmad Chehreghani</Authors>
+		<PackageProjectUrl>https://github.com/AChehre/Dapper.Aerospike</PackageProjectUrl>
+		<RepositoryUrl>https://github.com/AChehre/Dapper.Aerospike</RepositoryUrl>
+		<RepositoryType>git</RepositoryType>
+		<PublishRepositoryUrl>true</PublishRepositoryUrl>
+		<PackageLicenseExpression>Apache-2.0</PackageLicenseExpression>
 	</PropertyGroup>
 
 
 	<ItemGroup>
-		<PackageReference Include="Aerospike.Client" Version="4.2.0" />
-		<PackageReference Include="AtEase" Version="1.0.22" />
+		<PackageReference Include="Aerospike.Client" Version="4.2.0">
+			<PrivateAssets>all</PrivateAssets>
+			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+		</PackageReference>
+		<PackageReference Include="AtEase" Version="1.0.22">
+			<PrivateAssets>all</PrivateAssets>
+			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+		</PackageReference>
 		<PackageReference Include="MinVer" Version="2.5.0">
 			<PrivateAssets>all</PrivateAssets>
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
