--- a/src/Dapper.Aerospike/Dapper.Aerospike.csproj
+++ b/src/Dapper.Aerospike/Dapper.Aerospike.csproj
@@ -17,14 +17,8 @@
 
 
 	<ItemGroup>
-		<PackageReference Include="Aerospike.Client" Version="4.2.0">
-			<PrivateAssets>all</PrivateAssets>
-			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-		</PackageReference>
-		<PackageReference Include="AtEase" Version="1.0.22">
-			<PrivateAssets>all</PrivateAssets>
-			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-		</PackageReference>
+		<PackageReference Include="Aerospike.Client" Version="4.2.0" />
+		<PackageReference Include="AtEase" Version="1.0.22" />
 		<PackageReference Include="MinVer" Version="2.5.0">
 			<PrivateAssets>all</PrivateAssets>
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
